# USAL-GII-TIE-lectures

./: LICENSE  README.md
Lecture 1 - GMV/exercise/: .cproject  .project  CMakeLists.txt
Lecture 1 - GMV/exercise/buildarm/: CMakeCache.txt  Makefile  app  cmake_install.cmake
Lecture 1 - GMV/exercise/src/: main.cpp
Lecture 2 - Management Solutions/: Lecture2.ipynb
Lecture 3 - Deloitte/: Lecture 3.docx  currentCommandDump.txt  dlllist1940.txt  handles1940File.txt  pslist.txt  salida1940.txt  wanna.txt
Lecture 3 - Deloitte/analysis_results/: dlllist740.txt  filescanivecuqmanp.txt  handles1940.txt  handles1940Mutant.txt  handles740File.txt  handles740Mutant.txt  wanna_attrib.txt  wanna_exe.txt  wanna_http.txt
